Implemented a simple animated splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Solar Calculator</string>
+    <string name="welcome_to_solar_calculator">Welcome to Solar Calculator</string>
 </resources>
