--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Solar Calculator</string>
-    <string name="welcome_to_solar_calculator">Welcome to Solar Calculator</string>
+    <string name="welcome_to_solar_calculator">Solar Calculator</string>
+    <string name="tag_line">Easy. Fast. Eco-Friendly</string>
 </resources>
