Improved the user experience, made views scrollable, changed registration navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
     <string name="delete_account">Delete Account</string>
     <string name="edit_account">Edit Account</string>
     <string name="welcome_you_re_logged_in">Welcome! You\'re Logged In</string>
+    <string name="your_solar_cal_text">Your Solar Calculations</string>
+    <string name="use_green_icon_text">New item added, you can use the green icon to see calculations</string>
 </resources>
