--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
 <!--    <string name="about_the_team">About the Team</string>-->
     <string name="about_the_team">About the Team</string>
     <string name="or">OR</string>
+    <string name="welcome">Welcome</string>
 </resources>
